Add username column and contacts relation
