# services/api/internal/users/dto.go
@@ -3,6 +3,7 @@ package users
 type userResponse struct {
 	ID        string `json:"id"`
 	Email     string `json:"email"`
+	Username  string `json:"username"`
 	FirstName string `json:"firstName"`
 	LastName  string `json:"lastName"`
 }
